fix css security error on firefox mobile

--- a/www/wp-content/themes/arbre-integral/css/main.css
+++ b/www/wp-content/themes/arbre-integral/css/main.css
@@ -773,9 +773,17 @@ a {
   bottom: 0;
   left: 0;
   padding: 1em; }
+  @media (max-width: 40em) {
+    .share {
+      background: rgba(0, 0, 0, 0.1);
+      padding: 0.6em; } }
   .share .share-btn {
     border-bottom: 1px dotted transparent;
     font-size: 1.25em; }
+    @media (max-width: 40em) {
+      .share .share-btn {
+        padding: 0.6em;
+        font-size: 1em; } }
     .share .share-btn:hover, .share .share-btn:focus {
       border-bottom-color: currentColor; }
   .share [id='share-panel'], .share [id='share-panelw'] {
